--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
       - name: Run surge
-        run: surge ./ m.saad-bootcamp.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./ clevercodder.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
           
